feature: divided classes by packages
Co-authored-by: Mustafa <musyaflex@users.noreply.github.com>